[gd_scene load_steps=12 format=2]

[ext_resource path="res://ArtAssests/UI & Menu Art/Buttons_/Buttons__Hover_Level1.png" type="Texture" id=1]
[ext_resource path="res://ArtAssests/UI & Menu Art/Buttons_/Buttons__PressedDown_Level3.png" type="Texture" id=2]
[ext_resource path="res://ArtAssests/UI & Menu Art/Buttons_/Buttons__PressedDown_Level1.png" type="Texture" id=3]
[ext_resource path="res://ArtAssests/UI & Menu Art/Buttons_/Buttons__Hover_Level2.png" type="Texture" id=4]
[ext_resource path="res://Levels/LevelsMenu.gd" type="Script" id=5]
[ext_resource path="res://ArtAssests/UI & Menu Art/Buttons_/Buttons__Unpressed_Level3.png" type="Texture" id=6]
[ext_resource path="res://ArtAssests/UI & Menu Art/Buttons_/Buttons__Unpressed_Level1.png" type="Texture" id=7]
[ext_resource path="res://ArtAssests/UI & Menu Art/Buttons_/Buttons__Hover_Level3.png" type="Texture" id=8]
[ext_resource path="res://ArtAssests/UI & Menu Art/Buttons_/Buttons__Unpressed_Level2.png" type="Texture" id=9]
[ext_resource path="res://ArtAssests/UI & Menu Art/Buttons_/Buttons__PressedDown_Level2.png" type="Texture" id=10]
[ext_resource path="res://SFX/ui_click.wav" type="AudioStream" id=11]

[node name="LevelsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelContainer" type="VBoxContainer" parent="."]
margin_left = 308.0
margin_top = 153.71
margin_right = 792.421
margin_bottom = 413.71
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1Button" type="TextureButton" parent="LevelContainer"]
margin_right = 485.0
margin_bottom = 85.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2Button" type="TextureButton" parent="LevelContainer"]
margin_top = 89.0
margin_right = 485.0
margin_bottom = 174.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level3Button" type="TextureButton" parent="LevelContainer"]
margin_top = 178.0
margin_right = 485.0
margin_bottom = 263.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI_Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[connection signal="pressed" from="LevelContainer/Level1Button" to="." method="_on_Level1Button_pressed"]
[connection signal="pressed" from="LevelContainer/Level2Button" to="." method="_on_Level2Button_pressed"]
[connection signal="pressed" from="LevelContainer/Level3Button" to="." method="_on_Level3Button_pressed"]
